# gql-benchmark

./: .dockerignore  .gitignore  Cargo.toml  README.md  lefthook.yml
api-server/: Cargo.toml  build.rs
api-server/src/: context.rs  errors.rs  lib.rs  main.rs
bench-graphql/: Cargo.toml
bench-graphql/schema/: benchmarks.graphql
bench-graphql/src/: context.rs  errors.rs  lib.rs
bench-graphql/src/query/: query.rs
bench-graphql/src/services/: user.rs
bench-graphql/src/subscription/: mod.rs
db/: Cargo.toml
db/.sqlx/: query-2c6cc26e326b3ed48cf1ddfe34037ebf1249514af7f45917e33c9f5b814e5dac.json
db/rds/: 1_000-test-data.sql
db/src/: errors.rs  lib.rs  rds.rs
db/src/models/: user.rs
docker/: api.ecs.builder.Dockerfile  api.ecs.runner.Dockerfile  build-ecs.sh  compose.yml  docker-compose.yml  migration.Dockerfile  pack-ecs.sh
migrations/: initdb.sql  sqitch.conf  sqitch.plan
migrations/deploy/: db.sql  user.sql
migrations/revert/: db.sql  user.sql
migrations/verify/: db.sql  user.sql
shared-types/: Cargo.toml
shared-types/src/: lib.rs
util/: Cargo.toml
util/src/: lib.rs
