[package]
name = "api-server"
version = "0.1.0"
authors = ["David Estes <dav1do@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-actix-web = "6.0"
async-graphql= "6"
actix-web = "4.4"
actix-web-httpauth = "0.8"
actix-cors = "0.6"
anyhow = "1.0"
async-channel = "1.4"
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
db = { path = "../db" }
dotenv = "0.15"
form_urlencoded = "1.0"
futures = "0.3"
bench-graphql = { path = "../bench-graphql" }
http = "0.2"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = { version = "0.3" }
thiserror = "1"
tokio = { version = "1.4", features = ["macros"] }
tokio-stream = "0.1.5"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["json", "env-filter"] }
url = "2.2"
util = { path = "../util" }
uuid = { version = "1.4", features = ["v4", "serde"] }

[[bin]]
name = "api-server-bootstrap"
path = "src/main.rs"

[build-dependencies]
bench-graphql = { path = "../bench-graphql" }
