[package]
name = "bench-graphql"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
async-graphql = {version = "3", features=["apollo_tracing"]}
db = { path = "../db" }
futures = "0.3"
rand = "0.8"
serde = { version = "1.0.127", features = ["derive"] }
shared-types = { path = "../shared-types" }
thiserror = "1.0.26"
tracing = "0.1"
url = "2.2"
util = { path = "../util" }
