[package]
name = "db"
version = "0.1.0"
authors = ["David Estes <dav1do@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-types = { path = "../shared-types" }

async-trait = "0.1"
chrono = "0.4"
const_format = "0.2.19"
dataloader = { version = "0.14", default-features = false, features = ["runtime-tokio"]}
futures = "0.3"
num_enum = "0.5"
once_cell = "1.8"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.5", features = ["chrono", "json", "macros", "postgres", "offline", "uuid", "runtime-actix-native-tls"] } 
tracing = "0.1"
url = "2.2"
util = { path = "../util" }
uuid = { version = "0.8", features = ["v4", "serde"] }
thiserror = "1.0"
